# ceres-learning

./: .gitignore  CMakeLists.txt
src/: curve_fitting.cpp  helloworld.cpp  helloworld_analytic_diff.cpp  helloworld_numeric_diff.cpp  powell.cpp
src/BAL/: bal_problem.cpp  bal_problem.h  bundle_adjuster.cpp  random.h
